--- a/src/components/header/account/style.css
+++ b/src/components/header/account/style.css
@@ -12,6 +12,43 @@
   border-radius: 30px;
   cursor: pointer;
   margin-right: 6.8px;
+  transform: scale(1);
+  position: relative;
+  transition: transform 0.1s linear;
+}
+
+.header-account__btn::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  border-radius: inherit;
+}
+
+.header-account__btn:hover {
+  transform: scale(0.95);
+}
+
+.header-account__btn:hover::after {
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5) inset;
+  transition: box-shadow 0.1s linear;
+}
+
+.header-account__btn:focus-visible {
+  transform: scale(0.95);
+  outline: 2px solid #fff;
+  outline-offset: 4px;
+}
+
+.header-account__btn:active {
+  transform: scale(0.90);
+}
+
+.header-account__btn:active::after {
+  box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.5) inset;
+  transition: box-shadow 0.1s linear;
 }
 
 .header-account__avatar {
@@ -45,8 +82,6 @@
 .user-menu__icon {
 }
 
-
-
 .dropdown-menu {
   position: absolute;
   top: 70px;
@@ -67,7 +102,7 @@
 }
 
 .dropdown-menu::before {
-  content: "";
+  content: '';
   width: 11px;
   height: 11px;
   display: block;
@@ -95,6 +130,21 @@
   color: black;
   font-size: 16px;
   line-height: 21px;
+  text-decoration: none;
+}
+
+.dropdown-menu__link:hover {
+  text-decoration: underline;
+}
+
+.dropdown-menu__link:focus-visible {
+  color: #0067a3;
+  text-decoration: underline;
+  outline: none;
+}
+
+.dropdown-menu__link:active {
+  color: #0067a3;
   text-decoration: none;
 }
 
