--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -6,6 +6,7 @@
   background-color: #0079BF;
   padding: 20px 20px 32px;
   height: calc(100vh - 186px);
+  overflow: auto;
 }
 
 @media (max-width: 500px) {
